--- a/pagTest/Podfile
+++ b/pagTest/Podfile
@@ -1,16 +1,15 @@
 # Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+platform :ios, '12.1'
 
 target 'pagTest' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
-
+  pod 'Kingfisher'
   # Pods for pagTest
 
   target 'pagTestTests' do
     inherit! :search_paths
     # Pods for testing
-    pod 'Kingfisher'
   end
 
 end
